fix: added Vercel to CORS list